<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/cell_measure"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">


    <TextView
        android:id="@+id/date"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="15dp"
        android:layout_marginRight="1sp"
        android:layout_marginBottom="15dp"
        android:text="@string/date"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/measure_v"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10sp"
        android:paddingTop="15dp"
        android:text="@string/measure"/>

    <TextView
        android:id="@+id/measure_type_v"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/type"/>

    <ImageView
        android:id="@+id/button_remove_m"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/ic_delete_forever_black_24dp" />


</LinearLayout>