<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent = "true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title"
                android:layout_marginTop="70dp"
                android:textColor="#000"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/picture1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/portions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="50dp"
                    android:text="Portions : "
                    android:textColor="#000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/portions1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="50dp"
                    android:text=""
                    android:textColor="#000"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="50dp"
                        android:text="Prep : "
                        android:textColor="#000"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/time_prep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time_backing_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="50dp"
                        android:text="Backing : "
                        android:textColor="#000"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/time_backing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time_total_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="50dp"
                        android:text="Total Time : "
                        android:textColor="#000"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/time_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17sp" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/ing_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="50dp"
                android:text="@string/ing_title"
                android:textColor="#000"
                android:textSize="17sp" />

            <ListView
                android:id="@+id/ing_list"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="40dp">

            </ListView>

            <TextView
                android:id="@+id/nut_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="50dp"
                android:text="@string/nut_title"
                android:textColor="#000"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nut_kcal_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="50dp"
                        android:text="Calorie"
                        android:textColor="#000"
                        android:textSize="17sp" />
                    <TextView
                        android:id="@+id/nut_kcal_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="50dp"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nut_carbo_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="50dp"
                        android:text="Carbohydrate"
                        android:textColor="#000"
                        android:textSize="17sp" />
                    <TextView
                        android:id="@+id/nut_carbo_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="50dp"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nut_sat_fat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="50dp"
                        android:text="Graisse saturée"
                        android:textColor="#000"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/nut_sat_fat_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="50dp"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                    android:id="@+id/nut_protein"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="50dp"
                    android:text="Protein"
                    android:textColor="#000"
                    android:textSize="17sp" />

                    <TextView
                        android:id="@+id/nut_protein_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="50dp"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nut_fiber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="50dp"
                        android:text="Fiber"
                        android:textColor="#000"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/nut_fiber_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="50dp"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nut_sugar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="50dp"
                        android:text="Sugar : "
                        android:textColor="#000"
                        android:textSize="17sp" />
                    <TextView
                        android:id="@+id/nut_sugar_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="50dp"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nut_sodium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="50dp"
                        android:text="Sodium : "
                        android:textColor="#000"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/nut_sodium_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="50dp"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nut_fat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="50dp"
                        android:text="Fat : "
                        android:textColor="#000"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/nut_fat_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="50dp"
                        android:text=""
                        android:textColor="#000"
                        android:textSize="17sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/step_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="50dp"
                android:text="@string/step_title"
                android:textColor="#000"
                android:textSize="17sp"/>


            <ListView
                android:layout_marginTop="50dp"
                android:id="@+id/step_my_list"
                android:layout_width="wrap_content"
                android:layout_height="250dp">
            </ListView>

            <TextView
                android:id="@+id/final_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="50dp"
                android:text="@string/final_title"
                android:textColor="#000"
                android:textSize="17sp" />

        </LinearLayout>


    </ScrollView>

</RelativeLayout>



